# file-recover

./: .clang-format  .gitignore  CMakeLists.txt  find_extract_pngs_v2.c  find_hash.sh
include/: signature.h
src/: main.c  signature.c  utils.c  utils.h
